--- a/src/style/index.css
+++ b/src/style/index.css
@@ -150,17 +150,30 @@ button {
 }
 
 .todo-list li .destroy {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  bottom: 0;
-  width: 40px;
-  height: 40px;
-  margin: auto 0;
-  font-size: 30px;
-  color:rgba(231, 76, 60, 1);
-  margin-bottom: 11px;
-  transition: color 0.2s ease-out;
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 10px;
+	bottom: 0;
+	width: 40px;
+	height: 40px;
+	margin: auto 0;
+	font-size: 30px;
+	color: #cc9a9a;
+	margin-bottom: 11px;
+	transition: color 0.2s ease-out;
+}
+
+.todo-list li .destroy:hover {
+	color: #af5b5e;
+}
+
+.todo-list li .destroy:after {
+	content: 'x';
+}
+
+.todo-list li:hover .destroy {
+	display: block;
 }
 
 footer {
